# Raptor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml  draft-pdf.yml
doc/: paper.bib  paper.md
examples/: input.yaml  singletrack_input.yaml
examples/api_example/: active_learning_example.py  rve.py
examples/butter_example/: meltpool_butter.py  run.py
examples/cli_example/: input.yaml  input_multilayer.yaml  input_rve.yaml  input_singletrack.yaml
examples/data/meltPoolData/: ULI_v1700_theta0_meltpool.txt  ULI_v1700_theta0_widths.txt
examples/data/scanPathData/: ULI_layered_scanpath  ULI_single_scanpath  scanPath_0  scanPath_1  scanPath_10  scanPath_11  scanPath_12  scanPath_13  scanPath_14  scanPath_15  scanPath_16  scanPath_17  scanPath_18  scanPath_19  scanPath_2  scanPath_3  scanPath_4  scanPath_5  scanPath_6  scanPath_7  scanPath_8  scanPath_9  scanPath_ULI
examples/data/scanPathData/rve_layers/: ULI_rve_layer_0.txt  ULI_rve_layer_1.txt  ULI_rve_layer_10.txt  ULI_rve_layer_11.txt  ULI_rve_layer_12.txt  ULI_rve_layer_13.txt  ULI_rve_layer_14.txt  ULI_rve_layer_15.txt  ULI_rve_layer_16.txt  ULI_rve_layer_17.txt  ULI_rve_layer_2.txt  ULI_rve_layer_3.txt  ULI_rve_layer_4.txt  ULI_rve_layer_5.txt  ULI_rve_layer_6.txt  ULI_rve_layer_7.txt  ULI_rve_layer_8.txt  ULI_rve_layer_9.txt
examples/synthetic_api_example/: rve.py
examples/test/: test.py
src/raptor/: __init__.py  api.py  cli.py  core.py  core_numba.py  io.py  structures.py  utilities.py
tests/: __init__.py  test_api.py  test_core.py
